--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "d3-scale-chromatic": "^1.3.3",
     "eslint": "^3.13.1",
     "eslint-config-uber-es2015": "^3.0.1",
     "live-server": "^0.7"
