--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "d3-scale-chromatic": "^1.3.3",
+    "d3-svg-legend": "^2.25.6",
     "eslint": "^3.13.1",
     "eslint-config-uber-es2015": "^3.0.1",
     "live-server": "^0.7"
